Update path to css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <meta name="description" content="">
   <meta name="author" content="MaxMind, Inc.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="//www.maxmind.com/css/maxmind.css" rel="stylesheet">
+  <link href="//mm-staticassets.storage.googleapis.com/gh-pages-theme/maxmind.css" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/pygments.css"/>
   <link rel="shortcut icon" href="//dev.maxmind.com/static/favicon.ico">
 
